--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -9,6 +9,10 @@
 
 @media only screen and (max-width: 770px) {
     .container {
-        width: 100%;
+        width: 110%;
     }
+}
+
+.container{
+    border: black;
 }
